Fix 4 placeholder contrast in Dark Mode

--- a/css/main.css
+++ b/css/main.css
@@ -1110,6 +1110,9 @@ a.btn:active {
 .dark_mode .chatInput:disabled {
   background-color: #343a41;
 }
+.dark_mode .chatInput ::placeholder {
+  color: hsla(0, 100%, 60%, 0.4);
+}
 
 .dark_mode {
   color: #ddd !important;
